--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Documents</title>
+    <title>Abdul-Ahad</title>
   </head>
   <body data-bs-spy="scroll" data-bs-target=".navbar">
     <!--Navbar-->
